fix(Drawer): revise z-index

--- a/src/common/styles/variables/z-index.css
+++ b/src/common/styles/variables/z-index.css
@@ -19,5 +19,4 @@
   /* others */
   --z-index-progress-bar: 300;
   --z-index-wallet-connect-modal: 400;
-  --z-index-drawer-overlay: 10;
 }
